--- a/BioBoost/Base.lproj/Main.storyboard
+++ b/BioBoost/Base.lproj/Main.storyboard
@@ -108,16 +108,16 @@
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="BioBoost" cornerStyle="medium">
                                             <backgroundConfiguration key="background">
-                                                <color key="backgroundColor" red="0.68627450980392157" green="0.94901960784313721" blue="0.54509803921568623" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="backgroundColor" red="0.21568627450980393" green="0.25882352941176467" blue="0.98039215686274506" alpha="0.69999999999999996" colorSpace="custom" customColorSpace="sRGB"/>
                                             </backgroundConfiguration>
-                                            <color key="baseForegroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </buttonConfiguration>
                                         <connections>
                                             <action selector="bioBoostDidTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XI6-wt-qwU"/>
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" red="0.21568627450980393" green="0.25882352941176467" blue="0.98039215686274506" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="0.21568627450980393" green="0.25882352941176467" blue="0.98039215686274506" alpha="0.51000000000000001" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
